OK, secrets and configmaps working. Check it in.

--- a/alpha/pod_secrets_simple.yml
+++ b/alpha/pod_secrets_simple.yml
@@ -10,9 +10,6 @@ spec:
   containers:
     - image: docker.io/aranaescobedo/workload-id-csi-aks:1.1
       name: secret-container
-      envFrom:
-        - secretRef:
-            name: my-secret-info
       volumeMounts:
         - name: secrets-store
           mountPath: "/mnt/secrets-store"
@@ -23,4 +20,4 @@ spec:
       driver: secrets-store.csi.k8s.io
       readOnly: true
       volumeAttributes:
-        secretProviderClass: richeneyaks-alpha-secrets
+        secretProviderClass: secrets
