--- a/alpha/secret_provider_class_simple.yml
+++ b/alpha/secret_provider_class_simple.yml
@@ -1,16 +1,10 @@
 apiVersion: secrets-store.csi.x-k8s.io/v1
 kind: SecretProviderClass
 metadata:
-  name: richeneyaks-alpha-secrets
+  name: secrets
   namespace: alpha
 spec:
   provider: azure
-  secretObjects:
-  - secretName: my-secret-info
-    data:
-    - key: SECRET_NAME
-      objectName: my-secret
-    type: Opaque
   parameters:
     tenantId: 3c584bbd-915f-4c70-9f2e-7217983f22f6
     clientID: 084c4704-c714-4ffb-9d2b-298060584ece
@@ -18,7 +12,13 @@ spec:
     objects:  |
       array:
         - |
-          objectName: my-secret
+          objectName: car
+          objectType: secret
+        - |
+          objectName: city
+          objectType: secret
+        - |
+          objectName: food
           objectType: secret
     usePodIdentity: "false"
     useVMManagedIdentity: "false"
